--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>E-School</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -46,6 +47,7 @@
     </header>
 
     <!-- header end -->
+    
 
 
     <section class="bg-color top-section">
@@ -72,7 +74,8 @@
     <div class="container">
         <h2 class="text-center py-5">OFFLINE COURSES</h2>
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12  cursor">
+            <div class="col-md-3 col-sm-6 my-1 cursor">
+               <div class="padding">
                 <div class="img text-center p-4">
                     <img src="e-school-resources-master/ICON/book.png" class="img-fluid" alt="">
                 </div>
@@ -80,8 +83,10 @@
                     <h5>1500+ Topic</h5>
                     <p>learn Anything</p>
                 </div>
+               </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12  cursor">
+            <div class="col-md-3 col-sm-6 my-1 cursor">
+               <div class="padding">
                 <div class="img text-center p-4">
                     <img src="e-school-resources-master/ICON/Student.png" class="img-fluid" alt="">
                 </div>
@@ -89,23 +94,28 @@
                     <h5>1500+ Topic</h5>
                     <p>learn Anything</p>
                 </div>
+               </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12  cursor">
-                <div class="img text-center p-4">
-                    <img src="e-school-resources-master/ICON/Test.png" class="img-fluid" alt="">
-                </div>
-                <div class="img-text p-2 text-center">
-                    <h5>1500+ Topic</h5>
-                    <p>learn Anything</p>
+            <div class="col-md-3 col-sm-6 my-1 cursor">
+                <div class="padding">
+                    <div class="img text-center p-4">
+                        <img src="e-school-resources-master/ICON/Test.png" class="img-fluid" alt="">
+                    </div>
+                    <div class="img-text p-2 text-center">
+                        <h5>1500+ Topic</h5>
+                        <p>learn Anything</p>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12  cursor">
-                <div class="img text-center p-4">
-                    <img src="e-school-resources-master/ICON/Students.png" class="img-fluid" alt="">
-                </div>
-                <div class="img-text p-2 text-center">
-                    <h5>1500+ Topic</h5>
-                    <p>learn Anything</p>
+            <div class="col-md-3 col-sm-6 my-1 cursor">
+                <div class="padding">
+                    <div class="img text-center p-4">
+                        <img src="e-school-resources-master/ICON/Students.png" class="img-fluid" alt="">
+                    </div>
+                    <div class="img-text p-2 text-center">
+                        <h5>1500+ Topic</h5>
+                        <p>learn Anything</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -228,12 +238,15 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        ></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGaBy  fZo0T0to5eqruptLy"
+crossorigin="anonymous"></script>
 </body>
 
 </html>
